# atom

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  example.atom  main.atom  test.sh
atom/: Cargo.toml
atom-runtime/: Cargo.toml
atom-runtime/src/: api.rs  atom_ref.rs  class.rs  closure.rs  extern.rs  fn.rs  int.rs  interface.rs  lib.rs  method.rs  object.rs  origin.rs  result.rs  symbol.rs  value.rs
atom/examples/: call_arg_order.atom  casts.atom  closures.atom  heap_copy.atom  if_else.atom  init_class.atom  locals.atom  map_basics.atom  map_value_arithmetic.atom  self_referencing_closure.atom  type_assertions.atom
atom/examples/invalid/: index_out_of_bounds.atom  method_not_found.atom
atom/examples/perf/: README.md  binary_trees.atom  method_call.atom  run-all.sh  wyhash.atom
atom/src/: ast.rs  builtins.rs  bytecode.rs  compiler.rs  context.rs  error.rs  frame.rs  gc.rs  instance.rs  lexer.rs  lib.rs  main.rs  module.rs  opcode.rs  parser.rs  profiler.rs  stack.rs  tests.rs  utils.rs  vm.rs
atom/src/backend/: bytecode.rs  compiler.rs  compiler2.rs  mod.rs
atom/src/cmd/: mod.rs  repl.rs  run.rs  stats.rs
atom/src/collections/: mod.rs  nohash.rs  ordered.rs  reuse_vec.rs  stack.rs
atom/src/compiler/: backend.rs  codegen.rs  compiler.rs  compiler_v2.rs  filesystem.rs  frontend.rs  line_number_offset.rs  mod.rs  module.rs  path_finder.rs  pre_processor.rs  result.rs  scope.rs  slugs.rs  type_checker.rs  types.rs  utils.rs
atom/src/compiler/mir/: compiler.rs  mod.rs  scope.rs  types.rs
atom/src/compiler/optimizers/: call_void.rs  load_local_twice_add.rs  mod.rs  pre_compute_labels.rs  remove_core_validations.rs  remove_type_cast.rs  tail_call.rs
atom/src/frontend/: ast.rs  ir.rs  lexer.rs  mod.rs  parser.rs
atom/src/gc/: allocator.rs  handle.rs  mod.rs  pool.rs
atom/src/parser/: ast.rs  fold.rs  mod.rs  parser.rs  visitor.rs
atom/src/runtime/: array.rs  bigint.rs  blob.rs  builtins.rs  class.rs  core.rs  error.rs  errors.rs  func.rs  function.rs  int.rs  mod.rs  module.rs  object.rs  ops.rs  str.rs  value.rs
atom/src/runtime/gc/: mod.rs
atom/src/runtime/std/: array.rs  core.rs  ffi.rs  mod.rs  str.rs
atom/src/runtime/types/: array.rs  bigint.rs  blob.rs  class.rs  function.rs  mod.rs  object.rs  str.rs  value.rs
atom/src/runtime/vm/: array.rs  builtins.rs  frame.rs  mod.rs
atom/src/std/: io.rs  mod.rs
atom/src/std/atom/std/: core.atom  io.atom  map.atom
atom/src/std/atom/std/encoding/: json.atom  utf8.atom
atom/src/std/core/: array.rs  float.rs  map.rs  mod.rs  option.rs  range.rs  string.rs  tuple.rs
atom/src/std/encoding/: binary.rs  utf8.rs
atom/src/vm/: array.rs  builtins.rs  call_context.rs  mod.rs  module.rs  module_cache.rs  stack.rs  vm.rs
atom/std/: os.atom  prelude.atom
atom/stdlib/: std.atom
atom/stdlib/std/: map.atom  os.atom  time.atom
atom/tests/: compiler.rs  parser.rs  primitive.rs  runtime.rs
atom/tests/common/: mod.rs
atom/tests/results/parser/expr/: array.ron  builtin.ron  ident.ron  unary.ron
atom/tests/results/parser/expr/assign/: add.ron  div.ron  mul.ron  simple.ron  sub.ron
atom/tests/results/parser/expr/binary/: add.ron  and.ron  bitand.ron  bitor.ron  bitxor.ron  complex1.ron  complex2.ron  div.ron  eq.ron  gt.ron  gte.ron  lt.ron  lte.ron  mul.ron  ne.ron  or.ron  rem.ron  shiftleft.ron  shiftright.ron  sub.ron  type_assert.ron
atom/tests/results/parser/expr/call/: multiple.ron  no_args.ron  recursive.ron  single.ron
atom/tests/results/parser/expr/comp_member/: expr.ron  name.ron
atom/tests/results/parser/expr/literal/: bigint.ron  (+5 more)
atom/tests/source/compiler/: duplicate_method.atom  name_used.atom  unknown_var.atom  unused_var.atom
atom/tests/source/parser/expr/: array.atom  builtin.atom  ident.atom  unary.atom
atom/tests/source/primitive/float/: basic.atom  double-dot.atom  max.atom  min.atom
atom/tests/source/primitive/int/: basic.atom  double-sign.atom  max.atom  min.atom  negative.atom
atom/tests/source/runtime/: array_elem_assign.atom  array_index.atom  array_slice.atom  array_slice_bounds.atom  call_assign_arg.atom  call_basic.atom  call_nested.atom  call_var_fn.atom  call_var_method.atom  class_composition.atom  class_init.atom  class_member.atom  loop.atom  loop_nested.atom
(+303 files in other folders)
