[package]
name = "atom"
version = "0.1.0"
edition = "2021"

[features]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
rustc-hash = "2.0.0"
safe-gc = "1.0.0"
smallvec = { version = "1.13.2", features = ["const_generics"] }
thiserror = "1.0.61"
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
], optional = true }

[patch.crates-io]
safe-gc = { git = "https://github.com/dmeijboom/safe-gc.git", branch = "main" }

[profile.release]
debug = true
