[package]
name = "atom-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
strum = "0.21.0"
wyhash2 = "0.2.1"
indexmap = "1.7.0"
strum_macros = "0.21.1"
atom-ir = { path = "../atom-ir" }
