[package]
name = "atom"
version = "0.1.0"
edition = "2021"

[features]
profiler = []
default = ["mimalloc"]
mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
ron = "0.10.1"
wyhash2 = "0.2.1"
thiserror = "1.0.61"
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
], optional = true }
bytes = "1.7.1"
argh = "0.1.12"
mimalloc = { version = "0.1.47", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
pastey = "0.1.0"
libc = "0.2.172"
num_enum = "0.7.3"
linear-map = "1.2.0"
gmp-mpfr-sys = { version = "~1.6.5", default-features = false }
libmimalloc-sys = { version = "0.1.43", features = [
    "extended",
], optional = true }

[dev-dependencies]
test-case = "3.3.1"
